--- a/src/app/components/admin/admin-core/admin-mobile-footernav/admin-mobile-footernav.component.html
+++ b/src/app/components/admin/admin-core/admin-mobile-footernav/admin-mobile-footernav.component.html
@@ -41,7 +41,7 @@
                 [routerLink]="['/admin/pages']">
             <i class="fa fa-copy fa-lg"></i>
             <br>
-            <small>Pages</small>
+            <small class="footernav-txt">Pages</small>
         </button>
 
         <button mat-button
@@ -52,7 +52,7 @@
                 [routerLink]="['/admin/pages/new']">
             <i class="fa fa-file-plus fa-lg"></i>
             <br>
-            <small>New Page</small>
+            <small class="footernav-txt">New Page</small>
         </button>
 
         <button mat-button
@@ -62,20 +62,21 @@
                 [routerLink]="['/admin/users']">
             <i class="fa fa-users fa-lg"></i>
             <br>
-            <small>Users</small>
+            <small class="footernav-txt">Users</small>
         </button>
 
-
-        <!-- * Pop-up Menu * -->
-        <!-- * Trigger * -->
         <button mat-button
                 [matMenuTriggerFor]="appMenu"
                 class="menu-icon"
                 *ngIf="authService.afsUser$ | async">
                 <i class="fa fa-ellipsis-h fa-lg"></i>
                 <br>
-                <small>More</small>
+                <small class="footernav-txt">More</small>
         </button>
+
+        <!-- * Pop-up Menu * -->
+        <!-- * Trigger * -->
+
         <mat-menu #appMenu="matMenu" class="bg-dark">
             <button mat-menu-item
                     class="menu-icon"
@@ -84,6 +85,16 @@
                     [routerLink]="['/admin/users/', localUser.uid]">
                 <i class="fa fa-user"></i>&nbsp;
                 <small>My Profile</small>
+            </button>
+
+
+            <button mat-menu-item
+                    class="menu-icon"
+                    routerLinkActive="active"
+                    *ngIf="isLoggedIn && allowSettings"
+                    [routerLink]="['/admin/meta']">
+                <i class="fa fa-chart-line"></i>&nbsp;
+                <small>Meta</small>
             </button>
 
             <button mat-menu-item
@@ -95,31 +106,42 @@
                 <small>Settings</small>
             </button>
 
-            <!--<button mat-menu-item-->
-            <!--class="menu-icon"-->
-            <!--routerLinkActive="active"-->
-            <!--*ngIf="authService.afsUser$ | async"-->
-            <!--[routerLink]="['/all-gifts']">-->
-            <!--<i class="fa fa-th"></i>-->
-            <!--<small>All Gifts</small>-->
-            <!--</button>-->
+            <button mat-menu-item
+                    class="menu-icon"
+                    routerLinkActive="active"
+                    *ngIf="isLoggedIn"
+                    [routerLink]="['/admin/cards']">
+                <i class="fa fa-passport"></i>&nbsp;
+                <small>Cards</small>
+            </button>
 
-            <!--<button mat-menu-item-->
-            <!--class="menu-icon"-->
-            <!--routerLinkActive="active"-->
-            <!--*ngIf="!isLoggedIn"-->
-            <!--[routerLink]="['/signup']">-->
-            <!--<i class="fa fa-address-card"></i>-->
-            <!--<small>Signup</small>-->
-            <!--</button>-->
+            <button mat-menu-item
+                    class="menu-icon"
+                    routerLinkActive="active"
+                    *ngIf="isLoggedIn"
+                    [routerLink]="['/admin/featured-posts']">
+                <i class="fa fa-passport"></i>&nbsp;
+                <small>Featured Posts</small>
+            </button>
 
-            <!--<button mat-menu-item-->
-            <!--class="menu-icon"-->
-            <!--routerLinkActive="active"-->
-            <!--[routerLink]="['/help']">-->
-            <!--<i class="fa fa-question"></i>-->
-            <!--<small>Help</small>-->
-            <!--</button>-->
+            <button mat-menu-item
+                    class="menu-icon"
+                    routerLinkActive="active"
+                    *ngIf="isLoggedIn"
+                    [routerLink]="['/admin/ads']">
+                <i class="fa fa-money-bill-wave"></i>&nbsp;
+                <small>Advertising</small>
+            </button>
+
+            <button mat-menu-item
+                    class="menu-icon"
+                    routerLinkActive="active"
+                    *ngIf="isLoggedIn"
+                    target="_blank"
+                    [routerLink]="['/']">
+                <i class="fa fa-laptop"></i>&nbsp;
+                <small>Live Site</small>
+            </button>
 
             <div class="divider"></div>
 
