--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -71,7 +71,7 @@
                     </div>
 
 
-                    <div class="form-group" *ngIf="!isExtURLPage">
+                    <div class="form-group">
                         <label>Publish On</label>
                         <input type="string"
                                class="form-control"
@@ -100,6 +100,10 @@
                             <option>news-and-media</option>
                             <option>presenters</option>
                         </select>
+                        <p class="help-block alert alert-warning text-center mt-1"
+                           *ngIf="!f.category.valid && f.category.touched">
+                            <b>Category</b> is required!
+                        </p>
                     </div>
 
 
@@ -135,7 +139,7 @@
 
                     <div class="form-group" *ngIf="!isExtURLPage">
                         <label>Body</label>
-                        <ckeditor formControlName="body"
+                        <ckeditor [formControl]="newPageForm.controls['body']"
                                   [config]="CkeditorConfig"
                                   [class.invalid]="!f.body.valid && f.body.touched"
                                   [readonly]="false"
