--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
@@ -53,15 +53,15 @@
                 <table id="user-list" class="table table-striped table-bordered table-hover">
                     <thead>
                     <tr>
-                        <th scope="col">Banner Image</th>
-                        <th scope="col">Body Image</th>
-                        <th scope="col">Title</th>
-                        <th scope="col">Category/Sort #</th>
-                        <th scope="col">External URL</th>
-                        <th scope="col">Published</th>
-                        <th scope="col">Date</th>
-                        <th scope="col">Author</th>
-                        <th scope="col">Options</th>
+                        <th scope="col" style="vertical-align: top;">Banner Image</th>
+                        <th scope="col" style="vertical-align: top;">Body Image</th>
+                        <th scope="col" style="vertical-align: top;">Title</th>
+                        <th scope="col" style="vertical-align: top;">Category/Sort #</th>
+                        <th scope="col" style="vertical-align: top;">External URL</th>
+                        <th scope="col" style="vertical-align: top;">Published</th>
+                        <th scope="col" style="vertical-align: top;">Publish <br> Date</th>
+                        <th scope="col" style="vertical-align: top;">Author</th>
+                        <th scope="col" style="vertical-align: top;">Options</th>
                     </tr>
                     </thead>
                     <tbody>
