Updated footer 'page' lists for published and publish date

--- a/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
@@ -6,7 +6,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <span class="nav-item nav-link" [routerLink]="['pages']">
+            <span class="nav-item nav-link current-date" [routerLink]="['pages']">
                 <i class="fa fa-calendar"></i> {{ currentDate | date:'fullDate' }}
             </span>
             <!--<a class="nav-item nav-link" [routerLink]="['users']"><i class="fa fa-user"></i>&nbsp;Users</a>-->
