--- a/src/app/components/core/footer/footer.component.html
+++ b/src/app/components/core/footer/footer.component.html
@@ -35,7 +35,7 @@
     <div class="col-md-2">
         <h5>Register</h5>
         <ul>
-            <li *ngFor="let regPage of registerPages$ | async">
+            <li *ngFor="let regPage of registerPages$">
                 <a [routerLink]="['/register/', regPage.url]" *ngIf="!regPage.isExtURL">
                     {{ regPage.title }}
                 </a>
@@ -48,7 +48,7 @@
     <div class="col-md-2">
         <h5>Attendee Planning</h5>
         <ul>
-            <li *ngFor="let attPage of attendeePlanningPages$ | async">
+            <li *ngFor="let attPage of attendeePlanningPages$">
                 <a [routerLink]="['/attendee-planning/', attPage.url]" *ngIf="!attPage.isExtURL">
                     {{ attPage.title }}
                 </a>
@@ -63,7 +63,7 @@
             Education
         </h5>
         <ul>
-            <li *ngFor="let edPage of educationPages$ | async">
+            <li *ngFor="let edPage of educationPages$">
                 <a [routerLink]="['/education/', edPage.url]" *ngIf="!edPage.isExtURL">
                     {{ edPage.title }}
                 </a>
@@ -76,7 +76,7 @@
     <div class="col-md-2">
         <h5>Exhibitor Information</h5>
         <ul>
-            <li *ngFor="let exhPage of exhibitorInfoPages$ | async">
+            <li *ngFor="let exhPage of exhibitorInfoPages$">
                 <a [routerLink]="['/exhibitor-information/', exhPage.url]" *ngIf="!exhPage.isExtURL">
                     {{ exhPage.title }}
                 </a>
@@ -89,7 +89,7 @@
     <div class="col-md-2">
         <h5>News &amp; Media</h5>
         <ul>
-            <li *ngFor="let newsPage of newsAndMediaPages$ | async">
+            <li *ngFor="let newsPage of newsAndMediaPages$">
                 <a [routerLink]="['/news-and-media/', newsPage.url]" *ngIf="!newsPage.isExtURL">
                     {{ newsPage.title }}
                 </a>
@@ -103,7 +103,7 @@
     <div class="col-md-2">
         <h5>Presenters</h5>
         <ul>
-            <li *ngFor="let presPage of presentersPages$ | async">
+            <li *ngFor="let presPage of presentersPages$">
                 <a [routerLink]="['/presenters/', presPage.url]" *ngIf="!presPage.isExtURL">
                     {{ presPage.title }}
                 </a>
