--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -68,22 +68,31 @@
                             </p>
                         </div>
 
+                        <div class="form-group" *ngIf="!isExtURL && !isExtURLPage">
+                            <label>Slug</label>
+                            <pre class="alert bg-light text-secondary slug">/{{category}}/{{url}}</pre>
+                        </div>
+
                         <div class="form-group">
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox"
                                        class="custom-control-input"
                                        id="isExtURL"
-                                       formControlName="isExtURL">
+                                       formControlName="isExtURL"
+                                       (click)="isExtURLToggle()">
                                 <label class="custom-control-label"
                                        for="isExtURL">Is this an external URL?</label>
                             </div>
                         </div>
 
-                        <div class="form-group" *ngIf="isExtURL">
-                            <label>External URL</label>
+                        <div class="form-group" *ngIf="isExtURLPage">
+                            <label>External URL <br>
+                                <p class="alert alert-info">All values are needed if this is an external URL!</p>
+                            </label>
                             <input type="url"
                                    class="form-control"
                                    [class.invalid]="!f.extURL.valid && f.extURL.touched"
+                                   placeholder="https://"
                                    formControlName="extURL">
                             <p class="help-block alert alert-warning text-center mt-1"
                                *ngIf="!f.extURL.valid && f.extURL.touched">
@@ -91,29 +100,7 @@
                             </p>
                         </div>
 
-
-                        <div class="form-group" *ngIf="!isExtURL">
-                            <label>Slug</label>
-                            <pre class="alert bg-light text-secondary slug">/{{category}}/{{url}}</pre>
-                        </div>
-
-
-                        <div class="form-group" *ngIf="!isExtURL">
-                            <label>Body</label>
-                            <ckeditor [formControl]="editPageForm.controls['body']"
-                                      [class.invalid]="!f.body.valid && f.body.touched"
-                                      [(ngModel)]="page.body"
-                                      [readonly]="false"
-                                      [config]="CkeditorConfig"
-                                      debounce="500">
-                            </ckeditor>
-                            <p class="help-block alert alert-warning text-center mt-1"
-                               *ngIf="!f.body.valid && f.body.touched">
-                                The <b>Body</b> with at least 100 characters is required!
-                            </p>
-                        </div>
-
-                        <div class="form-group" *ngIf="!isExtURL">
+                        <div class="form-group" *ngIf="!isExtURL && !isExtURLPage">
                             <label>Author</label>
                             <input type="text"
                                    class="form-control"
@@ -125,7 +112,6 @@
                                 <b>Author</b> is required!
                             </p>
                         </div>
-
 
                         <div class="form-group">
                             <label>Publish On
@@ -165,8 +151,10 @@
                             </p>
                         </div>
 
+
+
                         <div class="form-group">
-                            <label for="category">Sort Order <br>
+                            <label for="sortOrder">Sort Order <br>
                                 <small>Order shown in navbar dropdown category</small>
                             </label>
                             <select class="form-control"
@@ -182,8 +170,9 @@
                             </select>
                         </div>
 
-                        <div class="form-group" *ngIf="!isExtURL">
-                            <label for="category">Template</label>
+
+                        <div class="form-group" *ngIf="!isExtURL && !isExtURLPage">
+                            <label for="template">Template</label>
                             <select class="form-control"
                                     id="template"
                                     [class.invalid]="!f.template.valid && f.template.touched"
@@ -197,7 +186,24 @@
                         </div>
 
 
-                        <div class="form-group" *ngIf="!isExtURL">
+                        <div class="form-group" *ngIf="!isExtURL && !isExtURLPage">
+                            <label>Body</label>
+                            <ckeditor [formControl]="editPageForm.controls['body']"
+                                      [class.invalid]="!f.body.valid && f.body.touched"
+                                      [(ngModel)]="page.body"
+                                      [readonly]="false"
+                                      [config]="CkeditorConfig"
+                                      debounce="500">
+                            </ckeditor>
+                            <p class="help-block alert alert-warning text-center mt-1"
+                               *ngIf="!f.body.valid && f.body.touched">
+                                The <b>Body</b> with at least 100 characters is required!
+                            </p>
+                        </div>
+
+
+
+                        <div class="form-group" *ngIf="!isExtURL && !isExtURLPage">
                             <div class="card image-uploader">
                                 <div class="card-body">
                                     <p class="card-title">
@@ -251,7 +257,7 @@
                         </div>
 
 
-                        <div class="form-group" *ngIf="!isExtURL">
+                        <div class="form-group" *ngIf="!isExtURL && !isExtURLPage">
                             <label>Banner Image URL
                                 <small>(Top banner image)</small>
                             </label>
@@ -266,7 +272,7 @@
                             </p>
                         </div>
 
-                        <div class="form-group" *ngIf="!isExtURL">
+                        <div class="form-group" *ngIf="!isExtURL && !isExtURLPage">
                             <label>Image URL
                                 <small>(Image on the page)</small>
                             </label>
