--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -44,7 +44,7 @@
 
                     <div class="form-group" *ngIf="isExtURLPage">
                         <label>External URL <br>
-                            <p class="alert alert-info">All values needed if this is an external URL!</p>
+                            <p class="alert alert-info">All values are needed if this is an external URL!</p>
                         </label>
                         <input type="url"
                                class="form-control"
