Page details/preview's edit bar/navbar is now sticky so that it replaces the admin navbar for that page's options

--- a/src/app/components/admin/admin-core/admin-mobile-footernav/admin-mobile-footernav.component.css
+++ b/src/app/components/admin/admin-core/admin-mobile-footernav/admin-mobile-footernav.component.css
@@ -40,7 +40,7 @@ i.fa {
 
 .divider {
     border-top: 1px solid #16171A;
-    border-bottom: 1px solid #494E5F;
+    border-bottom: 1px solid #3E4250;
 }
 
 .spacer {
