--- a/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.css
+++ b/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.css
@@ -1,6 +1,14 @@
 nav#layout-navbar {
     background-color: #1C202B;
     color: #9d9fa1;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.12),
+    0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.12),
+    0 1px 5px 0 rgba(0, 0, 0, 0.2);
+
+
 }
 
 li > a.nav-link {
