--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.css
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.css
@@ -1,5 +1,10 @@
 .navbar {
-    /*background-color: #1C202B;*/
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.12),
+    0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.12),
+    0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 li.nav-item {
@@ -22,7 +27,7 @@ img.bannerPhotoURL {
 
 h1.title {
     position: absolute;
-    top: 47%;
+    top: 30%;
     color: #ffffff;
     font-weight: bold;
 }
@@ -58,7 +63,6 @@ h2.card-sec-title {
 .row.cards {
     margin: 5em 0 8em 0;
 }
-
 
 .card-body {
     line-height: 2em;
