--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
@@ -1,62 +1,68 @@
 <!-- * ADMIN-PAGE-DETAILS (PREVIEW) * -->
+<!-- * Edit Options Sub-Navbar * -->
 <div class="row mb-4">
     <div class="container">
         <!-- * Edit Navbar Panel * -->
-        <nav class="navbar navbar-expand-lg bg-light text-light" *ngIf="page">
-            <a class="navbar-brand" href="#">
-                <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/gray-ddw-150.png" width="100"
-                     class="d-inline-block align-top" alt="DDW">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <i class="fa fa-dot-circle"></i> {{ page.title }}
-                    </li>
-                    <li class="nav-item">
-                        <i class="fa fa-user"></i> {{ page.author }}
-                    </li>
-                    <li class="nav-item ">
-                        <i class="fa fa-tags"></i> {{ page.category }}
-                    </li>
-                </ul>
-                <form class="form-inline mx-auto">
-                    <div class="btn-group btn-group-sm float-right"
-                         role="group"
-                         aria-label="Basic example">
-                        <a class="btn btn-primary"
-                           [routerLink]="['/admin/pages']">
-                            <i class="fal fa-arrow-circle-left"></i>&nbsp;All Pages
-                        </a>
-                        <a class="btn btn-secondary"
-                           [routerLink]="['edit']">
-                            <i class="fa fa-pencil"></i>&nbsp;Edit
-                        </a>
-                        <a class="btn btn-warning"
-                           [routerLink]="['/admin/pages']">
-                            <i class="fa fa-undo"></i>&nbsp;Cancel
-                        </a>
-                        <button class="btn btn-danger"
-                                (click)="onDeletePage()">
-                            <i class="fa fa-trash"></i>&nbsp;Delete
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </nav>
+        <div class="col-sm-12">
+            <nav class="navbar navbar-expand-lg fixed-top text-light" style="background-color: #1C202B;" *ngIf="page">
+                <a class="navbar-brand" href="#">
+                    <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/gray-ddw-150.png" width="100"
+                         class="d-inline-block align-top" alt="DDW">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <i class="fa fa-dot-circle"></i> {{ page.title }}
+                        </li>
+                        <li class="nav-item">
+                            <i class="fa fa-user"></i> {{ page.author }}
+                        </li>
+                        <li class="nav-item ">
+                            <i class="fa fa-tags"></i> {{ page.category }}
+                        </li>
+                    </ul>
+                    <form class="form-inline mx-auto">
+                        <div class="btn-group btn-group-sm float-right"
+                             role="group"
+                             aria-label="Basic example">
+                            <a class="btn btn-primary"
+                               [routerLink]="['/admin/pages']">
+                                <i class="fal fa-arrow-circle-left"></i>&nbsp;All Pages
+                            </a>
+                            <a class="btn btn-secondary"
+                               [routerLink]="['edit']">
+                                <i class="fa fa-pencil"></i>&nbsp;Edit
+                            </a>
+                            <a class="btn btn-warning"
+                               [routerLink]="['/admin/pages']">
+                                <i class="fa fa-undo"></i>&nbsp;Cancel
+                            </a>
+                            <button class="btn btn-danger"
+                                    (click)="onDeletePage()">
+                                <i class="fa fa-trash"></i>&nbsp;Delete
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </nav>
+        </div>
 
     </div>
 </div>
 
-<div *ngIf="page" [@simpleFadeAnimation]="'in'">
 
-    <img [src]="page.bannerPhotoURL" class="bannerPhotoURL">
+<!-- * If Regular Page * -->
+<div *ngIf="page && !page.isExtURL" [@simpleFadeAnimation]="'in'">
 
-    <div class="container">
-        <h1 class="title">{{ page.title }}</h1>
+    <div class="row">
+        <img [src]="page.bannerPhotoURL" class="bannerPhotoURL">
+        <div class="container">
+            <h1 class="title">{{ page.title }}</h1>
+        </div>
     </div>
 
     <div class="row crumbs">
@@ -77,5 +83,28 @@
             <div [innerHTML]="page.body | safeHtml" class="details-body"></div>
         </div>
     </div>
+</div>
 
+
+<!-- * If External Link * -->
+<div *ngIf="page && page.isExtURL" [@simpleFadeAnimation]="'in'">
+    <div class="row">
+        <div class="container text-center">
+            <div class="card mb-4 mt-5">
+                <div class="card-body">
+                    <h4 class="card-title">{{ page.title }}</h4>
+                    <div class="card-subtitle text-muted mb-3">Created By: {{ page.author }}</div>
+                    <p class="card-text">
+                        URL: {{ page.extURL }} <br>
+                        Sort Order #: {{ page.sortOrder }}
+                    </p>
+                    <a [href]="page.extURL"
+                       target="_blank"
+                       class="btn btn-default">
+                        Go To External Link
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
