Added front end fonts and spacing

--- a/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.css
+++ b/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.css
@@ -20,6 +20,7 @@ a.btn.btn-warning.btn-sm {
     -moz-border-radius: 0;
     border-radius: 0;
     font-weight: bold;
+    text-decoration: none;
 }
 
 a.btn.btn-warning:hover.btn-sm {
@@ -29,4 +30,5 @@ a.btn.btn-warning:hover.btn-sm {
     -moz-border-radius: 0;
     border-radius: 0;
     font-weight: bold;
+    text-decoration: none;
 }
