--- a/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.html
+++ b/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.html
@@ -115,7 +115,7 @@
                             <img class="card-img-top"
                                  [src]="card1.photoURL"
                                  [alt]="card1.title">
-                            <div class="card-body">
+                            <div class="card-body text-center">
                                 <h5 class="card-title">{{ card1.title }}</h5>
                                 <p class="card-text">{{ card1.body }}</p>
                                 <p class="text-center">
@@ -215,7 +215,7 @@
                             <img class="card-img-top"
                                  [src]="card2.photoURL"
                                  [alt]="card2.title">
-                            <div class="card-body">
+                            <div class="card-body text-center">
                                 <h5 class="card-title">{{ card2.title }}</h5>
                                 <p class="card-text">{{ card2.body }}</p>
                                 <p class="text-center">
@@ -316,7 +316,7 @@
                             <img class="card-img-top"
                                  [src]="card3.photoURL"
                                  [alt]="card3.title">
-                            <div class="card-body">
+                            <div class="card-body text-center">
                                 <h5 class="card-title">{{ card3.title }}</h5>
                                 <p class="card-text">{{ card3.body }}</p>
                                 <p class="text-center">
