--- a/src/app/components/admin/admin-core/admin-featured-blog-posts/admin-featured-blog-posts-edit/admin-featured-blog-posts-edit.component.html
+++ b/src/app/components/admin/admin-core/admin-featured-blog-posts/admin-featured-blog-posts-edit/admin-featured-blog-posts-edit.component.html
@@ -113,7 +113,7 @@
             <div class="card">
               <img class="card-img-top rounded-circle"
                    [src]="post1.photoURL">
-              <div class="card-body">
+              <div class="card-body text-center">
                 <p class="card-text">{{ post1.body }}</p>
                 <p class="text-center">
                   <a [href]="post1.url"
@@ -204,7 +204,7 @@
             <div class="card">
               <img class="card-img-top rounded-circle"
                    [src]="post2.photoURL">
-              <div class="card-body">
+              <div class="card-body text-center">
                 <p class="card-text">{{ post2.body }}</p>
                 <p class="text-center">
                   <a [href]="post2.url"
@@ -296,7 +296,7 @@
             <div class="card">
               <img class="card-img-top rounded-circle"
                    [src]="post3.photoURL">
-              <div class="card-body">
+              <div class="card-body text-center">
                 <p class="card-text">{{ post3.body }}</p>
                 <p class="text-center">
                   <a [href]="post3.url"
