--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
@@ -104,7 +104,7 @@
                                 No
                             </span>
                         </td>
-                        <td scope="col">{{ page.date | date:'mediumDate' }}</td>
+                        <td scope="col" class="date">{{ page.date | date:'mediumDate' }}</td>
                         <td scope="col" style="text-align:center;">
                             <span>{{ page.author }}</span>
                         </td>
