--- a/src/app/components/core/footer/footer.component.html
+++ b/src/app/components/core/footer/footer.component.html
@@ -5,8 +5,8 @@
              class="img-fluid">
     </div>
     <div class="col-md-6">
-        <p>Plan Your Itinerary with the Free DDW Mobile App.</p>
-        <p>The free app helps you search scientific sessions, browse posters, and find everything you need to know at
+        <p class="apps">Plan Your Itinerary with the Free DDW Mobile App.</p>
+        <p class="apps">The free app helps you search scientific sessions, browse posters, and find everything you need to know at
             the event. It is now available to download.</p>
         <div class="row">
             <div class="col-sm-6">
@@ -21,18 +21,18 @@
         <p><img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-white.png"
                 alt="DDW logo"
                 class="img-fluid ddw-white"></p>
-        <p>Contact Us <br>
+        <p class="apps">Contact Us <br>
             301-272-0022 <br>
             administration@ddw.org</p>
 
-        <p>Digestive Disease Week <br>
+        <p class="apps">Digestive Disease Week <br>
             4930 Del Ray Avenue <br>
             Bethesda, MD 20814</p>
     </div>
 </div>
 
 <div class="row middle-footer text-left">
-    <div class="col-md-2">
+    <div class="col-md-2 pl-5">
         <h5>Register</h5>
         <ul>
             <li *ngFor="let regPage of registerPages$">
@@ -100,7 +100,7 @@
         </ul>
     </div>
     <!-- * TODO: Make external link pages * -->
-    <div class="col-md-2">
+    <div class="col-md-2 pr-5">
         <h5>Presenters</h5>
         <ul>
             <li *ngFor="let presPage of presentersPages$">
@@ -125,13 +125,13 @@
 
 <div class="container-fluid copyright">
     <div class="row">
-        <div class="col-md-6">
-            <p>
+        <div class="col-md-6 pl-5">
+            <p class="copy">
                 &nbsp;Privacy Policy | &copy; 2018 Digestive Disease Week. All Rights Reserved.
             </p>
         </div>
-        <div class="col text-right">
-            <p>
+        <div class="col text-right pr-5">
+            <p class="copy">
                 Site Built by <a href="https://gastro.org" target="_blank" class="aga-copy">&copy; 2018 American
                 Gastroenterological Association</a>.&nbsp;
                 <a href="https://www.facebook.com/DDWMeeting" target="_blank" class="social"><i
