--- a/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.css
+++ b/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.css
@@ -7,13 +7,13 @@ nav#layout-navbar {
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 3px 1px -2px rgba(0, 0, 0, 0.12),
     0 1px 5px 0 rgba(0, 0, 0, 0.2);
-
-
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif;
+    font-size: 14px;
 }
 
 li > a.nav-link {
-    /*color: #5B5E63;*/
-    /*color: #4F5A78;*/
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif;
+    font-size: 14px;
     color: #9d9fa1;
 }
 
