--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
@@ -91,7 +91,7 @@
     <div class="row">
         <div class="container text-center">
             <div class="card mb-4 mt-5">
-                <div class="card-body">
+                <div class="card-body ext-link">
                     <h4 class="card-title">{{ page.title }}</h4>
                     <div class="card-subtitle text-muted mb-3">Created By: {{ page.author }}</div>
                     <p class="card-text">
