--- a/src/app/components/admin/admin-page/admin-page-item/admin-page-item.component.css
+++ b/src/app/components/admin/admin-page/admin-page-item/admin-page-item.component.css
@@ -1,3 +1,15 @@
+.card {
+    font-size: 14px !important;
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
+    line-height: 1.5;
+}
+
+.card-body > p.card-text {
+    font-size: 14px !important;
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
+    line-height: 1.5;
+}
+
 a {
     text-decoration: none;
 }
