--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.css
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.css
@@ -1,3 +1,17 @@
+table, tr, th, td {
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
+    font-size: 14px !important;
+}
+th {
+    font-size: 14px !important;
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
+    line-height: 1.5;
+}
+
+td.date {
+    line-height: 1.5;
+}
+
 img.page-image {
     max-width: 25px;
 }
