--- a/src/app/components/admin/admin.component.css
+++ b/src/app/components/admin/admin.component.css
@@ -1,9 +1,19 @@
 /* Global Admin Styles */
-p, div, tr, th, tr, td, span, input.form-control {
-    font-size: 14px;
-    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif;
+p, div, tr, th, tr, td, span, ul, ol, li, input.form-control, input[text], input[textarea], select {
+    font-size: 14px !important;
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
+    line-height: 1;
 
 }
+
+.image-uploader * {
+    font-size: 14px;
+}
+
+form * {
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif;
+}
+
 
 .bg-dark {
     background-color: #282E3E !important;
