--- a/src/app/components/core/navbar/navbar.component.css
+++ b/src/app/components/core/navbar/navbar.component.css
@@ -2,6 +2,11 @@ nav.navbar {
     opacity: 0.9;
 }
 
+li.nav-item > a {
+    font-size: 16px;
+    text-decoration: none;
+}
+
 img.ddw-logo {
     max-width: 200px;
 }
