--- a/src/app/components/pages/presenters/presenters.component.css
+++ b/src/app/components/pages/presenters/presenters.component.css
@@ -1,3 +1,22 @@
+p, div, td, th, li, ul {
+    font-family: 'Open Sans', Roboto, 'Helvetica Neue', sans-serif;
+    line-height: 2;
+}
+
+p, ul, ol, li {
+    font-size: 18px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Roboto, Helvetica, Arial, sans-serif;
+    font-weight: 500;
+}
+
+.container-fluid.body-container {
+    max-width: 1200px;
+}
+
+
 img.bannerPhotoURL {
     top: 0;
     left: 0;
