--- a/src/app/components/pages/register/register.component.html
+++ b/src/app/components/pages/register/register.component.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="row">
-        <div class="container">
+        <div class="container-fluid body-container">
             <img [src]="page.photoURL"
                  class="photoURL">
             <div [innerHTML]="page.body | safeHtml"></div>
