--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i');
-/*font-family: 'Open Sans', Roboto, 'Helvetica Neue', sans-serif;*/
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i|Roboto:400,400i,500,500i');
+
+/* Front Pages */
+p, li  {
+    font-family: 'Open Sans', Roboto, 'Helvetica Neue', sans-serif;
+    line-height: 2;
+    font-size: 18px;
+}
+
+h1, h2, h3 {
+    font-family: Roboto, Helvetica, Arial, sans-serif;
+    font-weight: 500;
+}
+
+
+p > a:link, li > a:link {
+    color: #2e6da4;
+    text-decoration: underline;
+}
+
+.image-uploader * {
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
+    font-size: 14px;
+    line-height: 1.5;
+}
 
 /* Theme colors */
 
@@ -22,15 +45,32 @@
     color: #fff;
     background: #282E3E;
 }
+
 /* CUSTOM FRONT-END STYLES */
 .cta {
     background-color: #003f5f;
     color: #ffffff;
+    margin: 5em 0;
 }
 
-.cta-right > * {
-    padding: 1em 0;
+.cta-left {
+    padding: 0;
+}
+
+.cta-right {
+    padding: 3em 1em 0 4em;
     vertical-align: middle;
+}
+
+.cta-right > blockquote {
+    font-family: 'Open Sans', Roboto, 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    line-height: 1.5;
+    font-weight: 600;
+}
+
+.lg-quote {
+    font-size: 32px;
 }
 
 
@@ -108,7 +148,6 @@ ddw-admin-cards.col-md-4 {
     padding: 0;
 }
 
-
 i.fa-spinner {
     font-size: 4em;
 }
@@ -122,6 +161,7 @@ a.btn.btn-warning.btn-lg {
     -moz-border-radius: 0;
     border-radius: 0;
     font-weight: bold;
+    text-decoration: none;
 }
 
 a.btn.btn-warning.btn-lg:hover {
@@ -131,4 +171,5 @@ a.btn.btn-warning.btn-lg:hover {
     -moz-border-radius: 0;
     border-radius: 0;
     font-weight: bold;
+    text-decoration: none;
 }
