--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.css
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.css
@@ -103,6 +103,7 @@ a.btn.btn-warning.btn-lg {
     border-radius: 0;
     font-weight: bold;
     text-decoration: none;
+    padding: 0.5em 2em;
 }
 
 a.btn.btn-warning.btn-lg:hover {
@@ -113,4 +114,5 @@ a.btn.btn-warning.btn-lg:hover {
     border-radius: 0;
     font-weight: bold;
     text-decoration: none;
+    padding: 0.5em 2em;
 }
