--- a/src/app/components/pages/register/register.component.css
+++ b/src/app/components/pages/register/register.component.css
@@ -80,6 +80,7 @@ a.btn.btn-warning.btn-lg {
     border-radius: 0;
     font-weight: bold;
     text-decoration: none;
+    padding: 0.5em 2em;
 }
 
 a.btn.btn-warning.btn-lg:hover {
@@ -90,4 +91,5 @@ a.btn.btn-warning.btn-lg:hover {
     border-radius: 0;
     font-weight: bold;
     text-decoration: none;
+    padding: 0.5em 2em;
 }
