--- a/src/styles.css
+++ b/src/styles.css
@@ -162,6 +162,7 @@ a.btn.btn-warning.btn-lg {
     border-radius: 0;
     font-weight: bold;
     text-decoration: none;
+    padding: 0.5em 2em;
 }
 
 a.btn.btn-warning.btn-lg:hover {
@@ -172,4 +173,5 @@ a.btn.btn-warning.btn-lg:hover {
     border-radius: 0;
     font-weight: bold;
     text-decoration: none;
+    padding: 0.5em 2em;
 }
