--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,10 @@ p > a:link, li > a:link {
     line-height: 1.5;
 }
 
+a.page-link {
+    text-decoration: none;
+}
+
 /* Theme colors */
 
 .bg-dark {
@@ -163,6 +167,7 @@ a.btn.btn-warning.btn-lg {
     font-weight: bold;
     text-decoration: none;
     padding: 0.5em 2em;
+    font-size: 18px;
 }
 
 a.btn.btn-warning.btn-lg:hover {
@@ -174,4 +179,5 @@ a.btn.btn-warning.btn-lg:hover {
     font-weight: bold;
     text-decoration: none;
     padding: 0.5em 2em;
+    font-size: 18px;
 }
