--- a/src/app/components/admin/admin-core/admin-cards/admin-cards.component.css
+++ b/src/app/components/admin/admin-core/admin-cards/admin-cards.component.css
@@ -19,6 +19,7 @@ a.btn.btn-warning.btn-lg {
     -moz-border-radius: 0;
     border-radius: 0;
     font-weight: bold;
+    font-size: 18px;
 }
 
 a.btn.btn-warning.btn-lg:hover {
@@ -28,4 +29,5 @@ a.btn.btn-warning.btn-lg:hover {
     -moz-border-radius: 0;
     border-radius: 0;
     font-weight: bold;
+    font-size: 18px;
 }
