--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.css
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.css
@@ -104,6 +104,7 @@ a.btn.btn-warning.btn-lg {
     font-weight: bold;
     text-decoration: none;
     padding: 0.5em 2em;
+    font-size: 18px;
 }
 
 a.btn.btn-warning.btn-lg:hover {
@@ -115,4 +116,5 @@ a.btn.btn-warning.btn-lg:hover {
     font-weight: bold;
     text-decoration: none;
     padding: 0.5em 2em;
+    font-size: 18px;
 }
